--- a/styles/index.css
+++ b/styles/index.css
@@ -4,9 +4,11 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.bg-image {
+* {
   box-sizing: border-box;
+}
 
+.bg-image {
   background-image: url("/images/om.jpg");
   
   filter: blur(8px);
@@ -20,8 +22,6 @@ body, html {
 }
 
 .bg-text {
-  box-sizing: border-box;
-  
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0, 0.4);
   color: white;
